refactor(Promotion): Promotion 생성자 및 필드 구성 수정
Promotion 생성 시 프로모션 정보를 전부 받도록 변경하여 필드 수를 줄이고 이름 정보를 포함시킵니다.
생성자 변경에 따른 테스트 코드 및 Promotion 을 생성하여 사용하고 있는 클래스들을 수정합니다.